roles/quay-enterprise/files/quay-enterprise-redis.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: quay-enterprise
  name: quay-enterprise-redis
  labels:
    app: quay-enterprise
    quay-enterprise-component: redis
spec:
  replicas: 1
  selector:
    matchLabels:  
      app: quay-enterprise
      quay-enterprise-component: redis
  template:
    metadata:
      namespace: quay-enterprise
      labels:
        app: quay-enterprise
        quay-enterprise-component: redis
    spec:
      containers:
      - name: redis-master
        image: quay.io/quay/redis
        ports:
        - containerPort: 6379
