roles/quay-enterprise/files/quay-enterprise-postgresql-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: postgres
  name: postgres
  namespace: quay-enterprise
spec:
  ports:
  - name: 5432-tcp
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    quay-enterprise-component: postgres
  sessionAffinity: None
  type: ClusterIP
