roles/quay-enterprise/files/quay-enterprise-service-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  namespace: quay-enterprise
  name: quay-enterprise
  labels:
    app: quay-enterprise
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: quay-tls
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
    - protocol: TCP
      port: 443
      targetPort: 443
      name: https
  selector:
    app: quay-enterprise
    quay-enterprise-component: app
